--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore single file, comment with hashtag
 new-file.txt
 
+# Ignore all files in the bin directory
 bin/
+
+# Ignore all .tmp files
+*.tmp
